# Cryptoc-android

./: .gitmodules  LICENSE  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hadroncfy/project4/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cryptoc.c  native-lib.cpp
app/src/main/java/com/hadroncfy/project4/: CryptActivity.java  Cryptoc.java  FileExtensionFilter.java  FileKindView.java  FileListActivity.java  FileListAdapter.java  FileSelectActivity.java  MainActivity.java  MetaData.java  OnFileListUpdateListener.java  OnFileSelectedListener.java
app/src/main/res/drawable/: file_view_background.xml
app/src/main/res/layout/: activity_main.xml  crypt_activity.xml  file_kind_view.xml  file_list_activity.xml  file_list_item.xml  file_select_activity.xml
app/src/main/res/values/: colors.xml  file_kind_view_attrs.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/test/java/com/hadroncfy/project4/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
